static/worktime/css/main.css
.panel-body > section {
  padding: 10px 20px 20px 20px;
}

/* When the screen is too small, stop the floats and go to one vertical column. */
@media (max-width: 615px) {
  .panel-body > section {
    float: none !important;
  }
}

#history .period {
  height: 10px;
  display: inline-block;
}

#history .period {
  border-top: 1px #ccc solid;
  border-bottom: 1px #ccc solid;
}
#history .period:first-child {
  border-left: 1px #ccc solid;
}
#history .period:last-child {
  border-right: 1px #ccc solid;
}

#history .period {
  background-color: #eee;
}
#history .period.mode-w {
  background-color: #afa;
}
#history .period.mode-p {
  background-color: #faa;
}
#history .period.mode-n {
  background-color: #ddf;
}
#history .period.mode-s, #history .period.mode-None, #history .period.mode-null {
  background-color: unset;
}

#current-mode {
  margin-left: 10px;
  margin-right: 5px;
}

#totals td {
  width: 4em;
  padding-left: 12px;
  padding-right: 12px;
}

#totals td.value {
  text-align: right;
}

#totals-table td.dummy {
  border-right: none;
}

#totals-table td.dummy + td {
  border-left: none;
}

#actions #switch-era {
  padding: 15px;
  border-bottom: none;
}

#actions form {
  border: 1px solid #ddd;
}

#adjust {
  height: 200px;
}

#adjust-delta, #adjust-mode {
  padding-top: 15px;
  padding-left: 10px;
}

#adjust-delta .description {
  padding-left: 5px;
}

#adjust-delta p {
  padding-top: 15px;
  padding-bottom: 15px;
}

#adjust-delta .verb {
  width: 4.3em;
  display: inline-block;
  text-align: right;
}

#adjust-delta input {
  width: 2.8em;
  margin-left: 2px;
  margin-right: 2px;
  padding-left: 0;
  padding-right: 0;
}

#adjust-delta .preposition {
  width: 2.2em;
  display: inline-block;
  text-align: center;
}

#adjust-mode button {
  display: block;
  margin-right: 10px;
}

form#clear {
  border-top: none;
  margin: 0;
  text-align: center;
}

#clear button {
  margin: 15px;
}

